--- a/css/GOT_master.css
+++ b/css/GOT_master.css
@@ -14,6 +14,13 @@ body { background-image:url(../images/grungeBG.jpg);
 	background-repeat:no-repeat; background-position:center center;
 	background-color:#000000; font-size:16px; }
 
+#introText
+{
+	margin-bottom: : 20px;
+	position: relative;
+	color: red;
+}
+
 h1 {
 	font-family: 'GOT_font';
 	color:white;
